fixed mediumWIndow alignment

--- a/src/css/elements.css
+++ b/src/css/elements.css
@@ -134,7 +134,7 @@ table {
         position: absolute;
         width: 100%;
         top: 0px;
-        bottom: 50px;
+        bottom: 41px;
     }
     .viewMain > div {
         background-color: white;
